--- a/_posts/2018-7-10-Alpha.md
+++ b/_posts/2018-7-10-Alpha.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Transparent Effects"
 date:   2018-07-10 14:15:05 +0000
-image: /assets/images/post10.jpg
+image: /assets/images/post10.png
 ---
 
 In Game Development, we often use two ways to achieve transparent effect, Aplha Test and Alpha Blending.
