--- a/_posts/2018-9-22- CubeMap.md
+++ b/_posts/2018-9-22- CubeMap.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "CubeMap for Reflection & Refraction"
+title:  "CubeMap"
 date:   2018-09-22 1:00:05 +0000
 image: /assets/images/post22.png
 ---
