--- a/_posts/2018-9-22- CubeMap.md
+++ b/_posts/2018-9-22- CubeMap.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "CubeMap"
+title:  "CubeMap (CG)"
 date:   2018-09-22
 categories: [Cg, Unity]
 tags: [Unity, Shader, Math,CG]
