--- a/_posts/2018-9-22- CubeMap.md
+++ b/_posts/2018-9-22- CubeMap.md
@@ -31,7 +31,7 @@ Different from sampling the 2D Texture, it needs a 3D Texture coordinate to samp
 > Therefore, we should use Cubemap texture for convex objects and do not use it for concave objects (because the concave objects reflect itself)
 
 ---
-#### 1. Reflection
+## **1. Reflection**
 
 To simulate the reflection effect, we simply need to calculate the direction of the reflection by the direction of the incident ray(which is the negative view direction) and the normal direction of the surface. Finally, the reflection direction is used to sample the Cubemap texture.
 
@@ -39,6 +39,8 @@ To simulate the reflection effect, we simply need to calculate the direction of 
 <img src="/static/assets/img/blog/reflection.png" width="50%">
 </p>
 
+
+### Code Example:
 >Properties:
 
 ```csharp
@@ -89,7 +91,7 @@ To simulate the reflection effect, we simply need to calculate the direction of 
 ```
 
 ---
-#### 2. Refraction
+## **2. Refraction**
 
 Refraction: When light rays from one medium, such as air, are deflected into another, such as glass, the direction of propagation generally changes, this phenomenon is called refraction.
 
@@ -104,12 +106,11 @@ Refraction: When light rays from one medium, such as air, are deflected into ano
 
 >Result:
 
-{: .center}
-![dot](/assets/images/PostImages/refraction.png){:height="50%" width="50%"}
-
 <p align="center">  
 <img src="/static/assets/img/blog/refraction.png" width="50%">
 </p>
+
+### Code Example:
 
 >Properties:
 
@@ -163,7 +164,7 @@ Refraction: When light rays from one medium, such as air, are deflected into ano
 
 
 ---
-#### 3. Fresnel Reflection
+## **3. Fresnel Reflection**
 
 Fresnel Reflection Represents a Optical Phenomenon. When light hits the surface of an object, some parts occur reflection, some parts goes into the inside of the object, or occur refraction or scattering.
 
@@ -179,6 +180,7 @@ In this equation, F0 is a reflection coefficient, which is used to control the m
 <img src="/static/assets/img/blog/schlickPP.png" width="50%">
 </p>
 
+### Code Example:
 >Properties:
 
 ```csharp
