--- a/_posts/2019-06-20-Test - GIF.md
+++ b/_posts/2019-06-20-Test - GIF.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Gif test"
+title:  "Embeded Link Test"
 date:   2019-06-5
 categories: [Python]
 tags: [Python]
@@ -9,7 +9,10 @@ icon: fa-code
 
 <div style='position:relative; padding-bottom:calc(56.25% + 44px)'><iframe src='https://gfycat.com/ifr/AbsoluteTidyAmurminnow' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div> 
 
-  <iframe src='https://gfycat.com/ifr/AbsoluteTidyAmurminnow' frameborder='0' scrolling='no' allowfullscreen width='640' height='404'></iframe>
+<iframe src='https://gfycat.com/ifr/AbsoluteTidyAmurminnow' frameborder='0' scrolling='no' allowfullscreen width='640' height='404'></iframe>
+
+<div style='position:relative; padding-bottom:calc(56.25% + 44px)'><iframe src='//player.bilibili.com/player.html?aid=52461636&cid=91813340&page=1' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div> 
+
 ---
 
 >**End --Cheng Gu**
